@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/wmfire
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmfire/ChangeLog,v 1.24 2012/07/03 16:36:18 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmfire/ChangeLog,v 1.25 2012/07/29 18:37:19 armin76 Exp $
+
+  29 Jul 2012; Raúl Porcel <armin76@gentoo.org> wmfire-1.2.3.ebuild,
+  wmfire-1.2.4-r1.ebuild, wmfire-1.2.4-r2.ebuild:
+  Drop sparc keywords
 
   03 Jul 2012; Brent Baude <ranger@gentoo.org> wmfire-1.2.4-r2.ebuild:
   Marking wmfire-1.2.4-r2 ppc for bug 422401
